anim lotus landing page done

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                         <label tabindex="0" class="btn btn-ghost lg:hidden">
                           <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" /></svg>
                         </label>
-                        <ul tabindex="0" class="text-white menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
+                        <ul tabindex="0" class="text-black md:text-white menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
                           <li><a>Home</a></li>
                           <li><a>Products</a></li>
                           <li><a>Features</a></li>
@@ -55,7 +55,7 @@
     <section class="bg-[#000000E6] flex justify-center items-center" id="img">
         <div>
             <div class=" ">
-                <h1 class="mb-5 text-sm md:text-7xl  font-bold text-center text-white">IMMERSE YOURSELF IN<br><span class="text-[#A8FF35]">LOTUS</span>EXCELLENCE</h1>
+                <h1 class="mb-5 text-4xl md:text-7xl  font-bold text-center text-white">IMMERSE YOURSELF IN<br><span class="text-[#A8FF35]">LOTUS</span>EXCELLENCE</h1>
                 <p class="mb-5 text-sm md:text-lg  font-medium text-center text-white">Discover Our Premium Headphone Collection for Audiophiles</p>
                 <div class="flex justify-center"><button class="btn  text-white bg-[#A8FF35] rounded-3xl font-bold border-none">Shop Now</button></div>
               </div>
