fav icon added dn

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <script src="https://cdn.tailwindcss.com"></script>
 <!-- ext css  -->
 <link rel="stylesheet" href="style.css">
+<!-- fav icon  -->
+<link rel="icon" type="image/x-icon" href="./images/Rectangle 14 (4).svg">
 </head>
 <body>
     <section class="bg-[#000000E6]">
